                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 14-07-2004 added: added My Programs setting to use Directory Names as description instead of embedded XBE description.
  - 12-07-2004 changed: immediate hd-spindown disabled while not playing fullscreen (preview/calibrating)
  - 12-07-2004 added: added Soften setting to Settings->User Interface
                      added Flicker filter setting to Settings->User Interface
                      moved Soften setting from Settings->My Videos to Settings->My Videos->Filters
                      added Flicker filter setting to Settings->My Videos->Filters
  - 10-07-2004 fixed: Auto-shutdown sometimes resets settings (hopefully)
  - 10-07-2004 fixed: AC3 5.1 was being played as 2 channel when digital enabled but passthrough disabled.
  - 08-07-2004 added: my music artist view now also shows the albums of the artist
  - 08-07-2004 added: My Programs now allows a depth when using flattening (default of 1) [REF: 982895].
  - 08-07-2004 added: possibility to specify default username for samba. usfull for smb browsing.
  - 08-07-2004 fixed: xbmc sometimes didn't go back to the share root when navigating up a directory.
  - 07-07-2004 fixed: cdda ripping speed increase. Two times faster now
  - 07-07-2004 added: cdda ripping to ogg / vorbis
  - 06-07-2004 fixed: album info can't be downloaded for folders with files without a taginfoloader
  - 06-07-2004 fixed: mp4 tag loader leaves open files
  - 06-07-2004 changed: HD spindown disabled when playing videos with vobsubs, vobsubs requires harddisk access
  - 06-07-2004 added: patch: [ 985491 ] Changes to able detect TS stream from Dreambox / Dbox2.